--- a/pages/acercade.html
+++ b/pages/acercade.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
+    <meta name="description" content="Arma tu PC al mejor precio del mercardo, lo ayer era imposible, hoy lo podes obtener al mejor precio tenemos 6 cuotas sin interes, ¡¡¡no te lo podes perder!!!">
+    <meta name="keywords" content="PC gamer, Gaming, INTEL, AMD, GTX, RTX, Mother, Placa de video, Procesador, Teclado, Mouse, Monitores, Gabinetes, Almacenamiento, Notebook,I7, I9, Ryzen">
+    <meta property="og:type" content="web-comercial">
+    <meta property="og:title" content="Mundo GAMER">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="">
 </head>
 <body>
     <header>
