--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
+    <meta name="description" content="Arma tu PC al mejor precio del mercardo, lo ayer era imposible, hoy lo podes obtener al mejor precio tenemos 6 cuotas sin interes, ¡¡¡no te lo podes perder!!!">
+    <meta name="keywords" content="PC gamer, Gaming, INTEL, AMD, GTX, RTX, Mother, Placa de video, Procesador, Teclado, Mouse, Monitores, Gabinetes, Almacenamiento, Notebook,I7, I9, Ryzen">
+    <meta property="og:type" content="web-comercial">
+    <meta property="og:title" content="Mundo GAMER">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+    <meta property="og:description" content="">
     <title>Mundo GAMER</title>
 </head>
 <body>
